--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ if (version.endsWith("-SNAPSHOT")) {
 repositories {
         mavenLocal()
         mavenCentral()
+        maven {
+            url 'http://oss.jfrog.org/artifactory/simple/oss-release-local'
+        }
         jcenter()
 }
 
@@ -37,8 +40,8 @@ dependencies {
     }
     compile group: 'org.slf4j', name: 'jul-to-slf4j', version:'1.7.5'
     compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13'
-    compile group: 'org.jrebirth',name: 'core', version: '7.7.0-SNAPSHOT'
-    compile group: 'org.jrebirth',name: 'preloader', version: '7.7.0-SNAPSHOT'
+    compile group: 'org.jrebirth',name: 'core', version: '0.7.6'
+    compile group: 'org.jrebirth',name: 'preloader', version: '0.7.6'
 
 }
 
@@ -47,4 +50,7 @@ compileJava {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 }
+
+
+
 
